--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
+.body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.font{
+  font-family: "Almarai", sans-serif;
+  font-size: 15px;
+}
+.color-body{
+  height: 100vh;
+  background-color: #f8f8f8;
+}
+.btn-color{
+  border: none;
+  border-radius: 8px;
+  color: white;
+  background-color: #224f61;
+  padding: 8px;
 }
